# $Id$

2006-11-14
	* Fix compile error with --disable-x11.
	* Add new timed thread abstraction file.
	* Convert thread activity to timed threads, including
	texeci, imap, pop3, audacious.

2006-11-13
	* Use pthread_cond_timedwait() instead of sleep() in audacious
	thread.  Will convert all worker threads to this timing method.  

2006-11-12
	* Fix freebsd build error.
	* Minor changes to syntax files.
	* Conky 1.4.4 released.

2006-11-11
	* Add max_user_text to documentation.
	* Fixed BadWindow bugs (#1568366, #1588384).

2006-11-10
	* Remove on_bottom and xmms_player completely.
	* Closed ibm_temps bug #1591609.
	* Conky 1.4.3 released.

2006-11-09
	* Updated vim and nano syntax coloring scripts.
	* Added extras/ dir with syntax stuff to distribution tarball.

2006-11-08
	* Added new config item 'max_user_text' with default 16384,
	twice as large as previous hard-coded default of 8192 bytes.
	Increase as needed to accomodate large config files with a
	great deal of text.  This closes SF bug #1574523.

2006-11-07
	* Changes to configure.ac for pkg-config on x11/xext/xdamage,
	with fallback to conventional checks.
	* Fixed segmentation fault on SUGUSR1 bug.
	* Commented out Imlib2 from configure.ac since it's only partially
	implemented.

2006-11-04
	* Removed broken mldonkey and seti support.
	* Added Hellf[i]re's nano syntax coloring script to svn.

2006-11-03
	* Removed support for Xmms, BMP and Infopipe from conky.  
	The Xmms and Bmp players are projects are dead and distros such 
	as Gentoo are slating them for removal.  
	* Added support for Audacious using new audacious vars.

2006-10-18
	* Implement WiFi signal level detection on FreeBSD (patch
	by Stepan Zastupov)

2006-10-04
	* Fix buffer overflow in parsing LC_ALL, LC_CTYPE and LANG
	environment variables and fix crash for users with locale
	name longer than 10 chars (repored by Michael Schwendt)

2006-09-30
	* --enable-debug added.
	* prevent libtool from adding its default CFLAGS

2006-09-28